--- a/newidea.html
+++ b/newidea.html
@@ -13,7 +13,11 @@
         <p>StartSmart</p>
     </nav>
     <form id="new_idea">
-        
+        <input type="text" name="title" placeholder="Title......">
+        <textarea type="text" name="title" placeholder="Body......">
+        <select name="genere" id="genere">
+            <option value="Ec"></option>
+        </select>
     </form>
 </body>
 
